deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: n8n
  labels:
    app: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      containers:
      - name: n8n
        image: n8nio/n8n
        ports:
        - containerPort: 5678
        volumeMounts:
        - mountPath: "/home/node/.n8n"
          name: n8nvolume
      volumes:
      - name: n8nvolume
        persistentVolumeClaim:
          claimName: n8npvc
