service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  labels:
    app: n8n
spec:
  ports:
  - name: http-web
    port: 80
    targetPort: 5678
  selector:
    app: n8n
